finished items routes & added photos

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "cloudinary": "^1.32.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
@@ -16,6 +17,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "hbs": "^4.1.1",
+    "mocha": "^10.0.0",
     "mongodb": "^4.10.0",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
@@ -28,7 +30,7 @@
   "devDependencies": {
     "bootstrap": "^5.2.1",
     "jquery": "^3.6.1",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.20",
     "popper.js": "^1.16.1"
   }
 }
