--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "express-session": "^1.17.3",
     "hbs": "^4.1.1",
     "mocha": "^10.0.0",
-    "mongodb": "^4.10.0",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -33,5 +32,8 @@
     "jquery": "^3.6.1",
     "nodemon": "^2.0.20",
     "popper.js": "^1.16.1"
+  },
+  "engines": {
+    "node": "18.10"
   }
 }
